--- a/Views/PasswordEntries/Details.cshtml
+++ b/Views/PasswordEntries/Details.cshtml
@@ -2,6 +2,12 @@
 
 @{
     ViewData["Title"] = "Details";
+    string decrypted = "Format invalide";
+    if (!string.IsNullOrEmpty(Model.EncryptedPassword) &&
+        PasswordManager.Helpers.EncryptionHelper.IsBase64String(Model.EncryptedPassword))
+    {
+        decrypted = PasswordManager.Helpers.EncryptionHelper.Decrypt(Model.EncryptedPassword);
+    }
 }
 
 <h1>Details</h1>
@@ -10,44 +16,50 @@
     <h4>PasswordEntry</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ServiceName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ServiceName)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Username)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Username)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EncryptedPassword)
+
+        <dt class="col-sm-2">
+            Mot de passe
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EncryptedPassword)
+        <dd class="col-sm-10">
+            @decrypted
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Notes)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Notes)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedAt)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CreatedAt)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.UserId)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.UserId)
         </dd>
     </dl>
 </div>
+
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
